--- a/app/src/main/res/layout/adapter_atracciones.xml
+++ b/app/src/main/res/layout/adapter_atracciones.xml
@@ -5,6 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:layout_gravity="center_horizontal"
     android:padding="10dp">
 
     <androidx.cardview.widget.CardView
