--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -167,7 +167,7 @@
         <LinearLayout
             android:id="@+id/recyclerViewContainer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="320dp"
             android:gravity="center_horizontal"
             android:layout_below="@id/space"
             android:orientation="horizontal"
