--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,74 +35,70 @@
         android:layout_marginTop="0dp"
         android:background="@color/Grey" />
 
-    <View
+    <LinearLayout
         android:id="@+id/cajaBlanca"
-        android:layout_width="295dp"
-        android:layout_height="312dp"
+        android:layout_width="292dp"
+        android:layout_height="320dp"
         android:layout_below="@id/logo"
         android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
-        android:background="@color/white" />
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:paddingTop="20dp">
 
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_centerInParent="true"
-        android:ems="10"
-        android:inputType="text"
-        android:hint="@string/usuario"/>
+        <TextView
+            android:id="@+id/mensajeBienvenido"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/bienvenido"
+            android:layout_gravity="center_horizontal"
+            android:textSize="20sp"
+            android:layout_marginBottom="10dp"/>
 
-    <TextView
-        android:id="@+id/mensajeBienvenido"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/bienvenido"
-        android:layout_centerHorizontal="true"
-        android:textSize="20sp"
-        android:layout_above="@id/email"
-        android:layout_marginBottom="10dp"/>
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_gravity="center_horizontal"
+            android:ems="10"
+            android:inputType="text"
+            android:hint="@string/usuario"/>
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:layout_below="@id/email"
-        android:layout_centerHorizontal="true"
-        android:hint="@string/contrasena"/>
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="48dp"
+            android:ems="10"
+            android:layout_marginBottom="10dp"
+            android:inputType="textPassword"
+            android:hint="@string/contrasena"/>
 
-    <Button
-        android:id="@+id/login"
-        android:layout_width="174dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/password"
-        android:layout_centerHorizontal="true"
-        android:text="@string/log_in"
-        android:backgroundTint="@color/red"/>
+        <Button
+            android:id="@+id/login"
+            android:layout_width="174dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/log_in"
+            android:backgroundTint="@color/red"/>
 
-    <TextView
-        android:id="@+id/noCuenta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/noCuenta"
-        android:layout_centerHorizontal="true"
-        android:textSize="15sp"
-        android:layout_below="@id/login"
-        android:layout_marginTop="10dp"/>
+        <TextView
+            android:id="@+id/noCuenta"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/noCuenta"
+            android:textSize="15sp"
+            android:layout_marginTop="10dp"/>
 
-    <Button
-        android:id="@+id/signup"
-        android:layout_width="113dp"
-        android:layout_height="48dp"
-        android:layout_below="@id/noCuenta"
-        android:layout_centerHorizontal="true"
-        android:backgroundTint="@color/Grey"
-        android:text="@string/sign_up"
-        android:textColor="@color/black"
-        android:layout_marginTop="10dp"/>
+        <Button
+            android:id="@+id/signup"
+            android:layout_width="113dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center_horizontal"
+            android:backgroundTint="@color/Grey"
+            android:text="@string/sign_up"
+            android:textColor="@color/black"
+            />
 
-
-
+    </LinearLayout>
 </RelativeLayout>
